raffia/tests/error/scss/forward-at-rule/with-missing-value.snap
---
source: raffia/tests/error.rs
---
error: expect token `:`, but `)` received
  ┌─ with-missing-value.scss:1:26
  │
1 │ @forward "other" with ($a);
  │                          ^


